--- a/menuSlider-Modal/index.html
+++ b/menuSlider-Modal/index.html
@@ -14,7 +14,7 @@
     <title>My Landing Page</title>
   </head>
   <body>
-    <nav>
+    <nav id='nav'>
       <div class="logo">
         <img src="https://randomuser.me/api/portraits/men/61.jpg" alt="user" />
       </div>
